--- a/style.css
+++ b/style.css
@@ -10,7 +10,6 @@ body {
    line-height: 1.6;
 }
 
-
 @media (max-width: 600px) {
    body {
        font-size: 14px;
@@ -28,7 +27,7 @@ header {
    justify-content: center;
    align-items: center;
    text-align: center;
-   background: linear-gradient(#346934,#27883e , #56b96f );
+   background: linear-gradient(#346934, #27883e, #56b96f);
    padding: 20px;
 }
 
@@ -56,7 +55,7 @@ section {
 section.onion > p,
 section.potato > p {
    color: #2d3436;
-   font-size: clamp(1.5rem, 3vw, 2em);
+   font-size: clamp(1.8rem, 3.5vw, 2.5em); /* Aumentado o tamanho do <p> */
    font-weight: bold;
 }
 
@@ -125,7 +124,7 @@ footer a.gradient {
 }
 
 p {
-   font-size: clamp(1.5rem, 4vw, 3rem);
+   font-size: clamp(1.8rem, 4vw, 3.5rem); /* Aumentado o tamanho do <p> */
    font-weight: bold;
    line-height: 1.1;
    margin: 1rem 0;
