--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
    box-sizing: border-box;
 }
 body {
+  
    background-color: #e6f7e6; 
    font-family: 'Roboto', sans-serif;
    line-height: 1.6;
@@ -18,6 +19,7 @@ body {
    padding: 2rem;
 }
 header {
+   font-family: 'Raleway', sans-serif;
    position: relative;
    display: flex;
    justify-content: center;
